Updated list of known weapons Included the Halloween Update weapons

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -1,4 +1,4 @@
-"WeaponNames"
+﻿"WeaponNames"
 {
 	"0"	"TF_WEAPON_BAT"
 	"1"	"TF_WEAPON_BOTTLE"
@@ -74,5 +74,6 @@
 	"232"	"TF_THEBUSHWACKA"
 	"237"	"TF_WEAPON_ROCKETLAUNCHER_JUMP"
 	"239"	"TF_UNIQUE_GLOVES_OF_RUNNING_URGENTLY"
-	"264"	"TF_UNIQUE_FRYINGPAN"
+	"265"	"TF_WEAPON_STICKYBOMB_JUMP"
+	"266"	"TF_HALLOWEENBOSS_AXE"
 }
