Fixed translations and weapons list Due to changes to the items_game.txt it was necessary to filter the weapons based on different criteria.

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -1,29 +1,5 @@
 ﻿"WeaponNames"
 {
-	"0"	"TF_WEAPON_BAT"
-	"1"	"TF_WEAPON_BOTTLE"
-	"2"	"TF_WEAPON_FIREAXE"
-	"3"	"TF_WEAPON_CLUB"
-	"4"	"TF_WEAPON_KNIFE"
-	"5"	"TF_WEAPON_FISTS"
-	"6"	"TF_WEAPON_SHOVEL"
-	"7"	"TF_WEAPON_WRENCH"
-	"8"	"TF_WEAPON_BONESAW"
-	"9"	"TF_WEAPON_SHOTGUN"
-	"13"	"TF_WEAPON_SCATTERGUN"
-	"14"	"TF_WEAPON_SNIPERRIFLE"
-	"15"	"TF_WEAPON_MINIGUN"
-	"16"	"TF_WEAPON_SMG"
-	"17"	"TF_WEAPON_SYRINGEGUN"
-	"18"	"TF_WEAPON_ROCKETLAUNCHER"
-	"19"	"TF_WEAPON_GRENADELAUNCHER"
-	"20"	"TF_WEAPON_PIPEBOMBLAUNCHER"
-	"21"	"TF_WEAPON_FLAMETHROWER"
-	"22"	"TF_WEAPON_PISTOL"
-	"24"	"TF_WEAPON_REVOLVER"
-	"25"	"TF_WEAPON_PDA_ENGINEER"
-	"29"	"TF_WEAPON_MEDIGUN"
-	"30"	"TF_WEAPON_WATCH"
 	"35"	"TF_UNIQUE_ACHIEVEMENT_MEDIGUN1"
 	"36"	"TF_UNIQUE_ACHIEVEMENT_SYRINGEGUN1"
 	"37"	"TF_UNIQUE_ACHIEVEMENT_BONESAW1"
@@ -39,8 +15,6 @@
 	"56"	"TF_UNIQUE_ACHIEVEMENT_COMPOUNDBOW"
 	"57"	"TF_UNIQUE_BACKSTAB_SHIELD"
 	"58"	"TF_UNIQUE_ACHIEVEMENT_JAR"
-	"59"	"TF_UNIQUE_ACHIEVEMENT_FEIGNWATCH"
-	"60"	"TF_UNIQUE_ACHIEVEMENT_CLOAKWATCH"
 	"61"	"TF_UNIQUE_ACHIEVEMENT_REVOLVER"
 	"127"	"TF_UNIQUE_ACHIEVEMENT_ROCKETLAUNCHER"
 	"128"	"TF_UNIQUE_ACHIEVEMENT_PICKAXE"
@@ -56,7 +30,10 @@
 	"154"	"TF_UNIQUE_MAKESHIFTCLUB"
 	"155"	"TF_UNIQUE_COMBAT_WRENCH"
 	"159"	"TF_UNIQUE_LUNCHBOX_CHOCOLATE"
+	"160"	"TF_TTG_MAXGUN"
+	"161"	"TF_TTG_SAMREVOLVER"
 	"163"	"TF_UNIQUE_ENERGYDRINK_CRITCOLA"
+	"169"	"TF_UNIQUE_GOLDEN_WRENCH"
 	"171"	"TF_UNIQUE_TRIBALMANKUKRI"
 	"172"	"TF_UNIQUE_BATTLEAXE"
 	"173"	"TF_UNIQUE_BATTLESAW"
@@ -74,6 +51,7 @@
 	"232"	"TF_THEBUSHWACKA"
 	"237"	"TF_WEAPON_ROCKETLAUNCHER_JUMP"
 	"239"	"TF_UNIQUE_GLOVES_OF_RUNNING_URGENTLY"
+	"264"	"TF_UNIQUE_FRYINGPAN"
 	"265"	"TF_WEAPON_STICKYBOMB_JUMP"
 	"266"	"TF_HALLOWEENBOSS_AXE"
 }
