--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -15,6 +15,8 @@
 	"56"	"TF_UNIQUE_ACHIEVEMENT_COMPOUNDBOW"
 	"57"	"TF_UNIQUE_BACKSTAB_SHIELD"
 	"58"	"TF_UNIQUE_ACHIEVEMENT_JAR"
+	"59"	"TF_UNIQUE_ACHIEVEMENT_FEIGNWATCH"
+	"60"	"TF_UNIQUE_ACHIEVEMENT_CLOAKWATCH"
 	"61"	"TF_UNIQUE_ACHIEVEMENT_REVOLVER"
 	"127"	"TF_UNIQUE_ACHIEVEMENT_ROCKETLAUNCHER"
 	"128"	"TF_UNIQUE_ACHIEVEMENT_PICKAXE"
