Added christmas weapons
Also updated language files to reflect the latest
changes by valve.

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -56,4 +56,19 @@
 	"264"	"TF_UNIQUE_FRYINGPAN"
 	"265"	"TF_WEAPON_STICKYBOMB_JUMP"
 	"266"	"TF_HALLOWEENBOSS_AXE"
+	"297"	"TF_TTG_WATCH"
+	"298"	"TF_IRON_CURTAIN"
+	"304"	"TF_AMPUTATOR"
+	"305"	"TF_CRUSADERSCROSSBOW"
+	"307"	"TF_ULLAPOOLCABER"
+	"308"	"TF_LOCHNLOAD"
+	"310"	"TF_WARRIORSSPIRIT"
+	"311"	"TF_BUFFALOSTEAK"
+	"312"	"TF_GATLINGGUN"
+	"317"	"TF_CANDYCANE"
+	"325"	"TF_BOSTONBASHER"
+	"326"	"TF_BACKSCRATCHER"
+	"327"	"TF_CLAIDHEAMOHMOR"
+	"329"	"TF_JAG"
+	"331"	"TF_FISTSOFSTEEL"
 }
