Added the two new weapons released with the Rift Promotion

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -71,4 +71,6 @@
 	"327"	"TF_CLAIDHEAMOHMOR"
 	"329"	"TF_JAG"
 	"331"	"TF_FISTSOFSTEEL"
+	"348"	"TF_UNIQUE_RIFTFIREAXE"
+	"349"	"TF_UNIQUE_RIFTFIREMACE"
 }
