Added weapons from March 10 update. Shogunpack sthsth

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -73,4 +73,8 @@
 	"331"	"TF_FISTSOFSTEEL"
 	"348"	"TF_UNIQUE_RIFTFIREAXE"
 	"349"	"TF_UNIQUE_RIFTFIREMACE"
+	"354"	"TF_SOLDIERSASHIMONO"
+	"355"	"TF_GUNBAI"
+	"356"	"TF_KUNAI"
+	"357"	"TF_SOLDIERKATANA"
 }
