The Saxxy, new all-class weapon
Ha! My scripts could handle it without issues and every
class gets the correct melee weapon.

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -77,6 +77,7 @@
 	"355"	"TF_GUNBAI"
 	"356"	"TF_KUNAI"
 	"357"	"TF_SOLDIERKATANA"
+	"423"	"TF_SAXXY"
 	"433"	"TF_SPACECHEM_FISHCAKE"
 	"452"	"TF_SCOUTSWORD"
 	"466"	"TF_RFAHAMMER"
