Updated cause of the UberUpdate

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -73,12 +73,34 @@
 	"331"	"TF_FISTSOFSTEEL"
 	"348"	"TF_UNIQUE_RIFTFIREAXE"
 	"349"	"TF_UNIQUE_RIFTFIREMACE"
+	"351"	"TF_WEAPON_FLAREGUN_DETONATOR"
 	"354"	"TF_SOLDIERSASHIMONO"
 	"355"	"TF_GUNBAI"
 	"356"	"TF_KUNAI"
 	"357"	"TF_SOLDIERKATANA"
+	"401"	"TF_SHAHANSHAH"
+	"402"	"TF_BAZAARBARGAIN"
+	"404"	"TF_PERSIANPERSUADER"
+	"405"	"TF_ALI_BABAS_WEE_BOOTIES"
+	"406"	"TF_SPLENDIDSCREEN"
+	"411"	"TF_UNIQUE_MEDIGUN_QUICKFIX"
+	"412"	"TF_OVERDOSE"
+	"413"	"TF_SOLEMNVOW"
+	"414"	"TF_LIBERTYLAUNCHER"
+	"415"	"TF_RESERVESHOOTER"
+	"416"	"TF_MARKETGARDENER"
 	"423"	"TF_SAXXY"
+	"424"	"TF_TOMISLAV"
+	"425"	"TF_RUSSIANRIOT"
+	"426"	"TF_EVICTIONNOTICE"
 	"433"	"TF_SPACECHEM_FISHCAKE"
+	"444"	"TF_MANTREADS"
+	"447"	"TF_DISCIPLINARYACTION"
+	"448"	"TF_SODAPOPPER"
+	"449"	"TF_WINGER"
+	"450"	"TF_ATOMIZER"
 	"452"	"TF_SCOUTSWORD"
+	"460"	"TF_ENFORCER"
+	"461"	"TF_BIGEARNER"
 	"466"	"TF_RFAHAMMER"
 }
