Updated with the Summer Special items and translations

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -100,7 +100,9 @@
 	"449"	"TF_WINGER"
 	"450"	"TF_ATOMIZER"
 	"452"	"TF_SCOUTSWORD"
+	"457"	"TF_MAILBOX"
 	"460"	"TF_ENFORCER"
 	"461"	"TF_BIGEARNER"
 	"466"	"TF_RFAHAMMER"
+	"482"	"TF_NINEIRON"
 }
