--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -56,6 +56,7 @@
 	"264"	"TF_UNIQUE_FRYINGPAN"
 	"265"	"TF_WEAPON_STICKYBOMB_JUMP"
 	"266"	"TF_HALLOWEENBOSS_AXE"
+	"294"	"TF_TTG_MAXGUN"
 	"297"	"TF_TTG_WATCH"
 	"298"	"TF_IRON_CURTAIN"
 	"304"	"TF_AMPUTATOR"
