--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -95,6 +95,8 @@
 	"425"	"TF_RUSSIANRIOT"
 	"426"	"TF_EVICTIONNOTICE"
 	"433"	"TF_SPACECHEM_FISHCAKE"
+	"441"	"TF_COWMANGLER"
+	"442"	"TF_RIGHTEOUSBISON"
 	"444"	"TF_MANTREADS"
 	"447"	"TF_DISCIPLINARYACTION"
 	"448"	"TF_SODAPOPPER"
