Added Deus Ex Promo Items

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -109,4 +109,8 @@
 	"466"	"TF_RFAHAMMER"
 	"482"	"TF_NINEIRON"
 	"513"	"TF_THEORIGINAL"
+	"525"	"TF_DEX_REVOLVER"
+	"526"	"TF_DEX_RIFLE"
+	"527"	"TF_DEX_SHOTGUN"
+	"528"	"TF_DEX_PISTOL"
 }
