Updated to latest weapons+translations. Manniversary etc.

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -113,4 +113,8 @@
 	"526"	"TF_DEX_RIFLE"
 	"527"	"TF_DEX_SHOTGUN"
 	"528"	"TF_DEX_PISTOL"
+	"572"	"TF_UNARMEDCOMBAT"
+	"574"	"TF_VOODOOPIN"
+	"608"	"TF_BOOTLEGGER"
+	"609"	"TF_SCOTTISHHANDSHAKE"
 }
