--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.2.3"
+			"Latest"	"0.3.0"
 		}
 		
-		"Notes"	"Initial repository release"
+		"Notes"	"Modularization. You'll need additional packages!"
 	}
 	
 	"Files"
