Added Apocofists and updated translation files

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -115,6 +115,7 @@
 	"528"	"TF_DEX_PISTOL"
 	"572"	"TF_UNARMEDCOMBAT"
 	"574"	"TF_VOODOOPIN"
+	"587"	"TF_APOCOFISTS"
 	"608"	"TF_BOOTLEGGER"
 	"609"	"TF_SCOTTISHHANDSHAKE"
 }
