--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.3.0"
+			"Latest"	"0.3.1"
 		}
 		
-		"Notes"	"Modularization. You'll need additional packages!"
+		"Notes"	"Added Apocofists and updated translation files."
 	}
 	
 	"Files"
