Updated to 0.3.2, Australian Christmas Items

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -116,6 +116,15 @@
 	"572"	"TF_UNARMEDCOMBAT"
 	"574"	"TF_VOODOOPIN"
 	"587"	"TF_APOCOFISTS"
+	"588"	"TF_POMSON"
+	"589"	"TF_WRENCHMOTRON"
+	"593"	"TF_THIRDDEGREE"
+	"594"	"TF_PHLOGISTINATOR"
+	"595"	"TF_MANMELTER"
 	"608"	"TF_BOOTLEGGER"
 	"609"	"TF_SCOTTISHHANDSHAKE"
+	"638"	"TF_SHARPDRESSER"
+	"648"	"TF_BALLBUSTER"
+	"649"	"TF_SPYCICLE"
+	"656"	"TF_MASCULINEMITTENS"
 }
