--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.3.1"
+			"Latest"	"0.3.2"
 		}
 		
-		"Notes"	"Added Apocofists and updated translation files."
+		"Notes"	"Added Australian Christmas 2011 stuff."
 	}
 	
 	"Files"
