Added more languages. Added Conscientious Blabla item

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -107,6 +107,7 @@
 	"460"	"TF_ENFORCER"
 	"461"	"TF_BIGEARNER"
 	"466"	"TF_RFAHAMMER"
+	"474"	"TF_CONSCIENTIOUSOBJECTOR"
 	"482"	"TF_NINEIRON"
 	"513"	"TF_THEORIGINAL"
 	"525"	"TF_DEX_REVOLVER"
