Added the festive weapons from the Australian Christmas

--- a/configs/weapons.cfg
+++ b/configs/weapons.cfg
@@ -127,5 +127,16 @@
 	"638"	"TF_SHARPDRESSER"
 	"648"	"TF_BALLBUSTER"
 	"649"	"TF_SPYCICLE"
+	"654"	"TF_WEAPON_MINIGUN_FESTIVE2011"
 	"656"	"TF_MASCULINEMITTENS"
+	"658"	"TF_WEAPON_ROCKETLAUNCHER_FESTIVE2011"
+	"659"	"TF_WEAPON_FLAMETHROWER_FESTIVE2011"
+	"660"	"TF_WEAPON_BAT_FESTIVE2011"
+	"661"	"TF_WEAPON_STICKYBOMBLAUNCHER_FESTIVE2011"
+	"662"	"TF_WEAPON_WRENCH_FESTIVE2011"
+	"663"	"TF_WEAPON_MEDIGUN_FESTIVE2011"
+	"664"	"TF_WEAPON_SNIPERRIFLE_FESTIVE2011"
+	"665"	"TF_WEAPON_KNIFE_FESTIVE2011"
+	"669"	"TF_WEAPON_SCATTERGUN_FESTIVE2011"
+	"5020"	"TF_T_NT"
 }
