--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,16 +4,18 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.3.2"
+			"Latest"	"0.4.0"
 		}
 		
-		"Notes"	"Added Australian Christmas 2011 stuff."
+		"Notes"	"More modularization. Hurray!"
 	}
 	
 	"Files"
 	{
 		"Source"	"Path_SM/scripting/tNoUnlocksPls.sp"
 		"Plugin"	"Path_SM/plugins/tNoUnlocksPls.smx"
+		"Plugin"	"Path_SM/plugins/tNoUnlocksPls.menu.smx"
+		"Plugin"	"Path_SM/plugins/tNoUnlocksPls.announce.smx"
 		"Plugin"	"Path_SM/configs/weapons.cfg"
 		
 		"Plugin"	"Path_SM/translations/chi/weapons.phrases.tf.txt"
@@ -32,6 +34,9 @@
 		"Plugin"	"Path_SM/translations/ro/weapons.phrases.tf.txt"
 		"Plugin"	"Path_SM/translations/ru/weapons.phrases.tf.txt"
 		"Plugin"	"Path_SM/translations/sv/weapons.phrases.tf.txt"
+		"Plugin"	"Path_SM/translations/hu/weapons.phrases.tf.txt"
+		"Plugin"	"Path_SM/translations/pt/weapons.phrases.tf.txt"
+		"Plugin"	"Path_SM/translations/tr/weapons.phrases.tf.txt"
 		"Plugin"	"Path_SM/translations/zho/weapons.phrases.tf.txt"
 		"Plugin"	"Path_SM/translations/weapons.phrases.tf.txt"
 	}
