--- a/package.tNoUnlocksPls.noext.cfg
+++ b/package.tNoUnlocksPls.noext.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.3.0"
+			"Latest"	"0.4.0"
 		}
 		
-		"Notes"	"Initial repository release"
+		"Notes"	"More modularization. Hurray!"
 	}
 	
 	"Files"
