--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.4.1"
+			"Latest"	"0.4.2"
 		}
 		
-		"Notes"	"More modularization. Hurray!"
+		"Notes"	"Fixed not having a config at first plugin start."
 	}
 	
 	"Files"
