--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.4.2"
+			"Latest"	"0.4.3"
 		}
 		
-		"Notes"	"Fixed not having a config at first plugin start."
+		"Notes"	"Fixed 'is translatable' detection."
 	}
 	
 	"Files"
