--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.4.3"
+			"Latest"	"0.4.4"
 		}
 		
-		"Notes"	"Fixed 'is translatable' detection."
+		"Notes"	"Fixed not detecting the sapper as a stock item."
 	}
 	
 	"Files"
