--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.4.5"
+			"Latest"	"0.4.6"
 		}
 		
-		"Notes"	"Fixed not detecting the sapper as a stock item."
+		"Notes"	"Fixed spy default weapons being broken."
 	}
 	
 	"Files"
