--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.4.6"
+			"Latest"	"0.4.7"
 		}
 		
-		"Notes"	"Fixed spy default weapons being broken."
+		"Notes"	"Fixed parsing for nested and multiple prefabs."
 	}
 	
 	"Files"
