--- a/package.tNoUnlocksPls.cfg
+++ b/package.tNoUnlocksPls.cfg
@@ -4,10 +4,10 @@
 	{
 		"Version"
 		{
-			"Latest"	"0.4.7"
+			"Latest"	"0.4.8"
 		}
 		
-		"Notes"	"Fixed parsing for nested and multiple prefabs."
+		"Notes"	"Fixed values being overwritten by prefabs."
 	}
 	
 	"Files"
